--- a/src/main/resources/templates/admin/import-agents.html
+++ b/src/main/resources/templates/admin/import-agents.html
@@ -427,7 +427,7 @@
           <a class="navbar-brand" href="/dashboard">
             <i class="fas fa-city me-2"></i>CiteSignal
           </a>
-          <a href="/dashboard" class="btn-back">
+          <a href="/user/admin/agents" class="btn-back">
             <i class="fas fa-arrow-left me-2"></i>Retour
           </a>
         </div>
