--- a/src/main/resources/templates/superadmin/list-all-users.html
+++ b/src/main/resources/templates/superadmin/list-all-users.html
@@ -319,7 +319,7 @@
         <span class="navbar-brand">
           <i class="fas fa-city me-2"></i>CiteSignal
         </span>
-        <a href="/user/superadmin/dashboard" class="btn-back">
+        <a href="/dashboard" class="btn-back">
           <i class="fas fa-arrow-left"></i> Retour au tableau de bord
         </a>
       </div>
