add-list-incidents-by-role

--- a/src/main/resources/templates/dashboard-admin.html
+++ b/src/main/resources/templates/dashboard-admin.html
@@ -597,6 +597,12 @@
           </a>
         </li>
         <li class="menu-item">
+          <a href="/incidents" class="menu-link">
+            <i class="fas fa-tasks"></i>
+            <span>Gestion signalements</span>
+          </a>
+        </li>
+        <li class="menu-item">
           <a href="/user/admin/agents" class="menu-link">
             <i class="fas fa-user-shield"></i>
             <span>Agents Municipaux</span>
@@ -608,6 +614,7 @@
             <span>Citoyens</span>
           </a>
         </li>
+
         <li class="menu-item">
           <a href="/user/admin/statistics" class="menu-link">
             <i class="fas fa-chart-bar"></i>
