--- a/src/main/resources/templates/dashboard-agent.html
+++ b/src/main/resources/templates/dashboard-agent.html
@@ -661,7 +661,7 @@
             </a>
         </li>
         <li class="menu-item">
-            <a href="/agent/incidents" class="menu-link">
+            <a href="/incidents" class="menu-link">
                 <i class="fas fa-tasks"></i>
                 <span>Gestion signalements</span>
             </a>
