--- a/src/main/resources/templates/dashboard-superadmin.html
+++ b/src/main/resources/templates/dashboard-superadmin.html
@@ -591,7 +591,12 @@
             <span>Tableau de bord</span>
           </a>
         </li>
-
+        <li class="menu-item">
+          <a href="/incidents" class="menu-link">
+            <i class="fas fa-tasks"></i>
+            <span>Gestion signalements</span>
+          </a>
+        </li>
         <li class="menu-item">
           <a href="/user/superadmin/admins" class="menu-link">
             <i class="fas fa-crown"></i>
